<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:text="@string/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_month" />

    <TextView
        android:id="@+id/title_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/month"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/title_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:text="@string/year"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/year"
        app:layout_constraintTop_toTopOf="@+id/title_month" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="2"
        app:layout_constraintStart_toEndOf="@+id/title_month"
        app:layout_constraintTop_toTopOf="@+id/title_month" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        tools:text="2022"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_year" />

    <ImageButton
        android:id="@+id/btn_up_month"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/month"
        app:layout_constraintEnd_toEndOf="@+id/month"
        app:layout_constraintStart_toStartOf="@+id/month"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />

    <ImageButton
        android:id="@+id/btn_up_year"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/year"
        app:layout_constraintEnd_toEndOf="@+id/year"
        app:layout_constraintStart_toStartOf="@+id/year"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />

    <ImageButton
        android:id="@+id/btn_down_month"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/month"
        app:layout_constraintStart_toStartOf="@+id/month"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

    <ImageButton
        android:id="@+id/btn_down_year"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/year"
        app:layout_constraintStart_toStartOf="@+id/year"
        app:layout_constraintTop_toBottomOf="@+id/year"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

</androidx.constraintlayout.widget.ConstraintLayout>